# django-drf-vue-postgres-todoapp

./: .gitignore  README.md
backend/: .gitignore  README.md  pyproject.toml  requirements.txt
backend/backend/: settings.py  urls.py
backend/todo/: models.py  serializers.py  urls.py  views.py
backend/todo/migrations/: 0001_initial.py  0002_alter_todo_date_created.py  0003_alter_todo_date_created.py  0004_alter_todo_date_created.py  0005_remove_todo_date_created.py  0006_todo_date_created.py
frontend/: .gitignore  package-lock.json  session.nvim
frontend/src/: App.vue
frontend/src/components/: TodoCard.vue
frontend/src/router/: index.js
frontend/src/store/: index.js
frontend/src/views/: EditView.vue  HomeView.vue
