[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["dapt <diegodapt18@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"
djangorestframework = "^3.14.0"
psycopg-binary = "^3.1.11"
psycopg2-binary = "^2.9.7"
django-cors-headers = "^4.2.0"
pynvim = "^0.4.3"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


